# rumpus_benchmark

./: Cargo.toml  README.md  distribution.py  error_surface.py  main.py  pyproject.toml  tilt_vs_wrmse.py  yaw_error_distribution.py  yaw_error_zen_quartiles.py
benchmarks/: bmk1.csv  bmk2.csv
src/: io.rs  lib.rs  main.rs  systems.rs  utils.rs
