[package]
name = "rumpus_benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
csv = "1.4.0"
image = "0.25.9"
rayon = "1.11.0"
# rumpus = { git = "https://github.com/benjaminpotter/rumpus.git", tag="0.5.1" }
rumpus = { path = "../rumpus" }
serde = { version = "1.0.228", features = ["derive"] }
sguaba = "0.9.11"
uom = "0.37.0"
