[project]
name = "rumpus-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "pyqt6>=6.10.2",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
]
